remove old code

--- a/docker-compose-local-data-volume.yml
+++ b/docker-compose-local-data-volume.yml
@@ -9,6 +9,9 @@ services:
         volumes:
             - /var/run/docker.sock:/var/run/docker.sock
 
+    confdata:
+        image: eristoddle/wso2-config-local
+
     wso2postgres:
         image: postgres:9.6
         environment:
@@ -28,8 +31,8 @@ services:
         ports:
             - 9443:9443
             - 9763:9763
-        volumes:
-            - ./template/build/local/conf/wso2is/repository/conf:/mnt/wso2is/repository/conf
+        volumes_from:
+            - confdata
 
     esb:
         # TODO: Script building this image with HL7 connector
@@ -41,16 +44,16 @@ services:
             - 8281:8281
             # NOTE: HL7 port for examples
             - 55971:55971
-        volumes:
-            - ./template/build/local/conf/wso2esb/repository/conf:/mnt/wso2esb/repository/conf
+        volumes_from:
+            - confdata
 
     greg:
         image: eristoddle/wso2greg:5.3.0
         ports:
             - 9445:9445
             - 9765:9765
-        volumes:
-            - ./template/build/local/conf/wso2greg/repository/conf:/mnt/wso2greg/repository/conf/
+        volumes_from:
+            - confdata
 
     # NOTE: There is no standalone BRS any more. So this is another ESB but uses configs from the /conf/wso2brs folder
     brs:
@@ -58,29 +61,29 @@ services:
         ports:
             - 9446:9446
             - 9766:9766
-        volumes:
-            - ./template/build/local/conf/wso2brs/repository/conf:/mnt/wso2esb/repository/conf
+        volumes_from:
+            - confdata
 
     dss:
         image: eristoddle/wso2dss:3.5.1
         ports:
             - 9447:9447
             - 9767:9767
-        volumes:
-            - ./template/build/local/conf/wso2dss/repository/conf:/mnt/wso2dss/repository/conf
+        volumes_from:
+            - confdata
 
     am:
         image: eristoddle/wso2am:2.0.0
         ports:
             - 9448:9448
             - 9768:9768
-        volumes:
-            - ./template/build/local/conf/wso2am/repository/conf:/mnt/wso2am/repository/conf
+        volumes_from:
+            - confdata
 
     # as:
     #     image: eristoddle/wso2as:5.3.0
     #     ports:
     #         - 9449:9449
     #         - 9769:9769
-    #     volumes:
-    #         - ./template/build/local/conf/wso2as/repository/conf:/mnt/wso2as/repository/conf
+    #     volumes_from:
+    #         - confdata
