--- a/template/docker/Dockerfile.dev
+++ b/template/docker/Dockerfile.dev
@@ -1,13 +1,14 @@
-FROM busybox:latest
-VOLUME ["/mnt"]
-COPY build/dev/conf /tmp-conf
-CMD mv -R /tmp-conf/wso2am/* /mnt/wso2am/
-CMD mv -R /tmp-conf/wso2as/* /mnt/wso2as/
-CMD mv -R /tmp-conf/wso2brs/* /mnt/wso2brs/
-CMD mv -R /tmp-conf/wso2dss/* /mnt/wso2dss/
-CMD mv -R /tmp-conf/wso2esb/* /mnt/wso2esb/
-CMD mv -R /tmp-conf/wso2greg/* /mnt/wso2greg/
-CMD mv -R /tmp-conf/wso2is/* /mnt/wso2is/
+FROM alpine:latest
+
+VOLUME ["/mnt/wso2am/repository/conf"]
+VOLUME ["/mnt/wso2as/repository/conf"]
+VOLUME ["/mnt/wso2brs/repository/conf"]
+VOLUME ["/mnt/wso2dss/repository/conf"]
+VOLUME ["/mnt/wso2esb/repository/conf"]
+VOLUME ["/mnt/wso2greg/repository/conf"]
+VOLUME ["/mnt/wso2is/repository/conf"]
+
+COPY build/dev/conf /mnt
 
 # Key to creating container for data
 CMD ["true"]
