ecs task definition

--- a/docker-compose-aws-dev.yml
+++ b/docker-compose-aws-dev.yml
@@ -1,70 +1,73 @@
 version: '2'
 services:
     confdata:
-        image: eristoddle/wso2-dev-config
-        # volumes:
-        #     - /tmp/wso2am:/conf/wso2am
-        #     - /tmp/wso2as:/conf/wso2as
-        #     - /tmp/wso2brs:/conf/wso2brs
-        #     - /tmp/wso2dss:/conf/wso2dss
-        #     - /tmp/wso2esb:/conf/wso2esb
-        #     - /tmp/wso2greg:/conf/wso2greg
-        #     - /tmp/wso2is:/conf/wso2is
-        #     - /tmp/wso2mysql:/conf/wso2mysql
-        #     - /tmp/wso2scripts:/conf/wso2scripts
+        image: eristoddle/wso2-config-dev
 
     wso2postgres:
         image: postgres:9.6
         environment:
             - POSTGRES_PASSWORD=password
             - POSTGRES_USER=wso2user
-        volumes:
-            - /tmp/wso2scripts/postgres-init:/docker-entrypoint-initdb.d
-            - /var/lib/postgresql/data:/var/lib/postgresql/data
-            - /tmp/wso2scripts/postgres-sql:/tmp/postgres-sql
+        volumes_from:
+            - confdata
 
     is:
-        image: eristoddle/wso2is_final
+        image: eristoddle/wso2is:5.3.0
         hostname: wso2identity
         ports:
             - 9443:9443
             - 9763:9763
+        volumes_from:
+            - confdata
 
-    # esb:
-    #     image: eristoddle/wso2esb_final
-    #     ports:
-    #         - 9444:9444
-    #         - 9764:9764
-    #         # NOTE: API and Proxy Service Ports
-    #         - 8281:8281
+    esb:
+        # TODO: Script building this image with HL7 connector
+        image: eristoddle/wso2esb_final
+        ports:
+            - 9444:9444
+            - 9764:9764
+            # NOTE: API and Proxy Service Ports
+            - 8281:8281
+        volumes_from:
+            - confdata
 
     greg:
-        image: eristoddle/wso2greg_final
-        command: -Dsetup
+        image: eristoddle/wso2greg:5.3.0
         ports:
             - 9445:9445
             - 9765:9765
+        volumes_from:
+            - confdata
 
-    # brs:
-    #     image: eristoddle/wso2brs_final
-    #     ports:
-    #         - 9446:9446
-    #         - 9766:9766
+    # NOTE: There is no standalone BRS any more. So this is another ESB but uses configs from the /conf/wso2brs folder
+    brs:
+        image: eristoddle/wso2esb:5.0.0
+        ports:
+            - 9446:9446
+            - 9766:9766
+        volumes_from:
+            - confdata
 
-    # dss:
-    #     image: eristoddle/wso2dss_final
-    #     ports:
-    #         - 9447:9447
-    #         - 9767:9767
+    dss:
+        image: eristoddle/wso2dss:3.5.1
+        ports:
+            - 9447:9447
+            - 9767:9767
+        volumes_from:
+            - confdata
 
-    # apim:
-    #     image: eristoddle/wso2am_final
-    #     ports:
-    #         - 9448:9448
-    #         - 9768:9768
+    am:
+        image: eristoddle/wso2am:2.0.0
+        ports:
+            - 9448:9448
+            - 9768:9768
+        volumes_from:
+            - confdata
 
     # as:
-    #     image: eristoddle/wso2as_final
+    #     image: eristoddle/wso2as:5.3.0
     #     ports:
     #         - 9449:9449
     #         - 9769:9769
+    #     volumes_from:
+    #         - confdata
