--- a/docker/Dockerfile.dev
+++ b/docker/Dockerfile.dev
@@ -9,6 +9,15 @@ VOLUME ["/mnt/wso2greg/repository/conf"]
 VOLUME ["/mnt/wso2is/repository/conf"]
 
 COPY build/dev/conf /mnt
+COPY template/conf/wso2scripts /mnt/wso2scripts
+
+# Postgres image - eventually not needed
+VOLUME ["/tmp/postgres-sql"]
+VOLUME ["/docker-entrypoint-initdb.d"]
+COPY template/conf/wso2scripts/postgres-init /docker-entrypoint-initdb.d
+COPY template/conf/wso2scripts/postgres-sql /tmp/postgres-sql
+CMD mkdir /var/lib/postgresql/data
+
 
 # Key to creating container for data
 CMD ["true"]
