--- a/docker-compose-rancher-dev.yml
+++ b/docker-compose-rancher-dev.yml
@@ -2,33 +2,19 @@ version: '2'
 
 services:
     confdata:
-        # TODO: Temporarily pulling generic config volume from dockerhub to test things. Change this.
-        # This the image built from the Dockerfile in this project
-        image: eristoddle/wso2-dev-config
+        image: eristoddle/wso2-config-dev
         container_name: confdata
         labels:
             io.rancher.container.start_once: 'true'
             io.rancher.container.pull_image: always
-        volumes:
-            - /opt/wso2am:/conf/wso2am
-            - /opt/wso2as:/conf/wso2as
-            - /opt/wso2brs:/conf/wso2brs
-            - /opt/wso2dss:/conf/wso2dss
-            - /opt/wso2esb:/conf/wso2esb
-            - /opt/wso2greg:/conf/wso2greg
-            - /opt/wso2is:/conf/wso2is
-            - /opt/wso2mysql:/conf/wso2mysql
-            - /opt/wso2scripts:/conf/wso2scripts
 
     wso2postgres:
         image: postgres:9.6
         environment:
             - POSTGRES_PASSWORD=password
             - POSTGRES_USER=wso2user
-        volumes:
-            - /opt/wso2scripts/postgres-init:/docker-entrypoint-initdb.d
-            - /var/lib/postgresql/data
-            - /opt/wso2scripts/postgres-sql:/tmp/postgres-sql
+        volumes_from:
+            - confdata
 
     is:
         image: eristoddle/wso2is:5.3.0
@@ -36,41 +22,27 @@ services:
         ports:
             - 9443:9443
             - 9763:9763
-        volumes:
-            - /opt/wso2is/repository/conf/datasources/master-datasources.xml:/mnt/wso2is/repository/conf/datasources/master-datasources.xml
-            - /opt/wso2is/repository/conf/carbon.xml:/mnt/wso2is/repository/conf/carbon.xml
-            - /opt/wso2is/repository/conf/registry.xml:/mnt/wso2is/repository/conf/registry.xml
-            - /opt/wso2is/repository/conf/user-mgt.xml:/mnt/wso2is/repository/conf/user-mgt.xml
-            - /opt/wso2is/repository/conf/identity/sso-idp-config.xml:/mnt/wso2is/repository/conf/identity/sso-idp-config.xml
-            - /opt/wso2is/repository/conf/axis2/axis2.xml:/mnt/wso2is/repository/conf/axis2/axis2.xml
+        volumes_from:
+            - confdata
 
     esb:
-        image: eristoddle/wso2esb_features:5.0.0
+        # TODO: Script building this image with HL7 connector
+        image: eristoddle/wso2esb_final
         ports:
             - 9444:9444
             - 9764:9764
             # NOTE: API and Proxy Service Ports
             - 8281:8281
-        volumes:
-            - /opt/wso2esb/repository/conf/datasources/master-datasources.xml:/mnt/wso2esb/repository/conf/datasources/master-datasources.xml
-            - /opt/wso2esb/repository/conf/registry.xml:/mnt/wso2esb/repository/conf/registry.xml
-            - /opt/wso2esb/repository/conf/security/authenticators.xml:/mnt/wso2esb/repository/conf/security/authenticators.xml
-            - /opt/wso2esb/repository/conf/carbon.xml:/mnt/wso2esb/repository/conf/carbon.xml
-            - /opt/wso2esb/repository/conf/axis2/axis2.xml:/mnt/wso2esb/repository/conf/axis2/axis2.xml
+        volumes_from:
+            - confdata
 
     greg:
         image: eristoddle/wso2greg:5.3.0
-        command: -Dsetup
         ports:
             - 9445:9445
             - 9765:9765
-        volumes:
-            - /opt/wso2greg/repository/conf/datasources/master-datasources.xml:/mnt/wso2greg/repository/conf/datasources/master-datasources.xml
-            - /opt/wso2greg/repository/conf/security/authenticators.xml:/mnt/wso2greg/repository/conf/security/authenticators.xml
-            - /opt/wso2greg/repository/conf/registry.xml:/mnt/wso2greg/repository/conf/registry.xml
-            - /opt/wso2greg/repository/conf/carbon.xml:/mnt/wso2greg/repository/conf/carbon.xml
-            - /opt/wso2greg/repository/conf/axis2/axis2.xml:/mnt/wso2greg/repository/conf/axis2/axis2.xml
-            - /opt/wso2greg/repository/resources/lifecycles/ServiceLifeCycle.xml:/mnt/wso2greg/repository/resources/lifecycles/ServiceLifeCycle.xml
+        volumes_from:
+            - confdata
 
     # NOTE: There is no standalone BRS any more. So this is another ESB but uses configs from the /conf/wso2brs folder
     brs:
@@ -78,45 +50,29 @@ services:
         ports:
             - 9446:9446
             - 9766:9766
-        volumes:
-            - /opt/wso2brs/repository/conf/datasources/master-datasources.xml:/mnt/wso2esb/repository/conf/datasources/master-datasources.xml
-            - /opt/wso2brs/repository/conf/registry.xml:/mnt/wso2esb/repository/conf/registry.xml
-            - /opt/wso2brs/repository/conf/security/authenticators.xml:/mnt/wso2esb/repository/conf/security/authenticators.xml
-            - /opt/wso2brs/repository/conf/carbon.xml:/mnt/wso2esb/repository/conf/carbon.xml
-            - /opt/wso2brs/repository/conf/axis2/axis2.xml:/mnt/wso2esb/repository/conf/axis2/axis2.xml
+        volumes_from:
+            - confdata
 
     dss:
         image: eristoddle/wso2dss:3.5.1
         ports:
             - 9447:9447
             - 9767:9767
-        volumes:
-            - /opt/wso2dss/repository/conf/datasources/master-datasources.xml:/mnt/wso2dss/repository/conf/datasources/master-datasources.xml
-            - /opt/wso2dss/repository/conf/registry.xml:/mnt/wso2dss/repository/conf/registry.xml
-            - /opt/wso2dss/repository/conf/security/authenticators.xml:/mnt/wso2dss/repository/conf/security/authenticators.xml
-            - /opt/wso2dss/repository/conf/carbon.xml:/mnt/wso2dss/repository/conf/carbon.xml
-            - /opt/wso2dss/repository/conf/axis2/axis2.xml:/mnt/wso2dss/repository/conf/axis2/axis2.xml
+        volumes_from:
+            - confdata
 
-    # apim:
-    #     image: eristoddle/wso2am:2.0.0
-    #     ports:
-    #         - 9448:9448
-    #         - 9768:9768
-    #     volumes:
-    #         - /opt/wso2am/repository/conf/datasources/master-datasources.xml:/mnt/wso2am/repository/conf/datasources/master-datasources.xml
-    #         - /opt/wso2am/repository/conf/registry.xml:/mnt/wso2am/repository/conf/registry.xml
-    #         - /opt/wso2am/repository/conf/security/authenticators.xml:/mnt/wso2am/repository/conf/security/authenticators.xml
-    #         - /opt/wso2am/repository/conf/carbon.xml:/mnt/wso2am/repository/conf/carbon.xml
-    #         - /opt/wso2am/repository/conf/axis2/axis2.xml:/mnt/wso2am/repository/conf/axis2/axis2.xml
-
-    as:
-        image: eristoddle/wso2as:5.3.0
+    am:
+        image: eristoddle/wso2am:2.0.0
         ports:
-            - 9449:9449
-            - 9769:9769
-        volumes:
-            - /opt/wso2as/repository/conf/datasources/master-datasources.xml:/mnt/wso2as/repository/conf/datasources/master-datasources.xml
-            - /opt/wso2as/repository/conf/registry.xml:/mnt/wso2as/repository/conf/registry.xml
-            - /opt/wso2as/repository/conf/security/authenticators.xml:/mnt/wso2as/repository/conf/security/authenticators.xml
-            - /opt/wso2as/repository/conf/carbon.xml:/mnt/wso2as/repository/conf/carbon.xml
-            - /opt/wso2as/repository/conf/axis2/axis2.xml:/mnt/wso2as/repository/conf/axis2/axis2.xml
+            - 9448:9448
+            - 9768:9768
+        volumes_from:
+            - confdata
+
+    # as:
+    #     image: eristoddle/wso2as:5.3.0
+    #     ports:
+    #         - 9449:9449
+    #         - 9769:9769
+    #     volumes_from:
+    #         - confdata
